--- a/ressources/sass/modules/_navigation.scss
+++ b/ressources/sass/modules/_navigation.scss
@@ -14,8 +14,8 @@
 
 .entete .navigation {
   width: 100%;
-  @media screen and (min-width: 830px) and (max-width: $tablet900px - 1) {
-	width: 90%;
+  @media screen and (min-width: 750px) and (max-width: $tablet900px - 1) {
+	width: 85%;
   }
   @media screen and (min-width: $tablet900px) {
 	width: initial;
@@ -26,6 +26,7 @@
 	justify-content: space-between;
 	list-style-type: none;
 	padding: 0;
+	margin: 3.5rem 0;
   }
 
   &__item {
@@ -44,7 +45,8 @@
 	text-decoration: none;
 	line-height: 120%;
 	letter-spacing: $EspacementStandard;
-	padding: 1rem 2rem;
+	padding: 1rem 1.5rem;
+	margin: 0 0.3rem;
 	text-align: center;
 	@media screen and (min-width: 550px) {
 	  font-size: 2rem;
@@ -116,11 +118,14 @@
 
 	&.courante {
 	  @include boutonPageCourante;
-	  line-height: 100%;
+	  line-height: 120%;
 
 	  &:hover {
 		border: none;
-		padding: 1.5rem 2.8rem;
+		padding: 1.3rem 1.8rem;
+		@media screen and (min-width: 550px) {
+		  padding: 1.5rem 2.8rem;
+		}
 	  }
 	}
   }
@@ -134,15 +139,22 @@
   &__liste {
 	list-style-type: none;
 	padding: 0;
+	vertical-align: top;
 
 	&.rangeeSections {
 	  padding: 1rem 0 1rem 0;
+
+	  & > * {
+		width: initial;
+	  }
 	}
   }
 
   &__item {
 	display: inline-block;
 	width: calc(50% - 1.3rem);
+	vertical-align: top;
+	padding: 1rem 0;
 
 	&:nth-child(odd) {
 	  padding-right: 2rem;
@@ -152,6 +164,11 @@
 	}
 
 	@media screen and (min-width: $mobile600px) {
+	  width: initial;
+	  grid-column: span 6;
+	}
+
+	@media screen and (min-width: $tablet900px) {
 	  width: initial;
 	  grid-column: span 2;
 	}
@@ -187,9 +204,27 @@
 	font-size: 1.6rem;
 	display: inline-block;
 	line-height: 120%;
-	border-radius: $arrondiMobile;
+	border-radius: $arrondiMobile - 1rem;
 	margin-top: 0.5rem;
-	padding: 1.3rem 3rem;
+	padding: 1.3rem 1rem;
+	@media screen and (min-width: 400px) {
+	  padding: 1.3rem 2rem;
+	  border-radius: $arrondiMobile;
+	}
+	@media screen and (min-width: $mobile600px) {
+	  padding: 1.3rem 3rem;
+	}
+	@media screen and (min-width: 800px) {
+	  padding: 1.3rem 2rem;
+	}
+	@media screen and (min-width: $tablet900px) {
+	  padding: 1.3rem 1rem;
+	  border-radius: $arrondiMobile - 1rem;
+	}
+	@media screen and (min-width: $desktop1200px) {
+	  padding: 1.3rem 3rem;
+	  border-radius: $arrondiMobile;
+	}
   }
 
   // Styles spécifique aux liens des sections
